entry-task/src/main/java/com/shopee/xiaoshuai/entrytask/antlr/ETSqlParser.java
// Generated from /Users/xiaoshuai.zhang/IdeaProjects/entry-task/src/main/resources/ETSql.g4 by ANTLR 4.8

package com.shopee.xiaoshuai.entrytask.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ETSqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		EQUAL_OPERATOR=1, GREATER_OR_EQUAL_OPERATOR=2, GREATER_THAN_OPERATOR=3, 
		LESS_OR_EQUAL_OPERATOR=4, LESS_THAN_OPERATOR=5, NOT_EQUAL_OPERATOR=6, 
		PLUS_OPERATOR=7, MINUS_OPERATOR=8, MULT_OPERATOR=9, DIV_OPERATOR=10, LOGICAL_NOT_OPERATOR=11, 
		LOGICAL_AND_OPERATOR=12, LOGICAL_OR_OPERATOR=13, COMMA_SYMBOL=14, SEMICOLON_SYMBOL=15, 
		COLON_SYMBOL=16, OPEN_PAR_SYMBOL=17, CLOSE_PAR_SYMBOL=18, UNDERLINE_SYMBOL=19, 
		NULL2_SYMBOL=20, PARAM_MARKER=21, CREATE_SYMBOL=22, SELECT_SYMBOL=23, 
		FROM_SYMBOL=24, TABLE_SYMBOL=25, AS_SYMBOL=26, WHERE_SYMBOL=27, SUM_SYMBOL=28, 
		AND_SYMBOL=29, OR_SYMBOL=30, STRING_SYMBOL=31, INT_SYMBOL=32, DOUBLE_SYMBOL=33, 
		GROUP_SYMBOL=34, BY_SYMBOL=35, BETWEEN_SYMBOL=36, NO_SYMBOL=37, NOT_SYMBOL=38, 
		IN_SYMBOL=39, WS=40, IDENTIFIER=41, STRING_LITERAL=42, INT=43, DOUBLE=44, 
		NOT_EQUAL2_OPERATOR=45;
	public static final int
		RULE_sqlstatement = 0, RULE_createStatement = 1, RULE_column_defs = 2, 
		RULE_column_def = 3, RULE_type_name = 4, RULE_selectStatement = 5, RULE_selectElements = 6, 
		RULE_selectElement = 7, RULE_fullColumnName = 8, RULE_uid = 9, RULE_functionCall = 10, 
		RULE_functionArg = 11, RULE_tableSources = 12, RULE_subquery = 13, RULE_tableName = 14, 
		RULE_whereClause = 15, RULE_logicExpression = 16, RULE_conditionExpression = 17, 
		RULE_logicalOperator = 18, RULE_comparisonOperator = 19, RULE_value = 20, 
		RULE_textLiteral = 21, RULE_decimalLiteral = 22, RULE_groupByCaluse = 23, 
		RULE_groupByItem = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"sqlstatement", "createStatement", "column_defs", "column_def", "type_name", 
			"selectStatement", "selectElements", "selectElement", "fullColumnName", 
			"uid", "functionCall", "functionArg", "tableSources", "subquery", "tableName", 
			"whereClause", "logicExpression", "conditionExpression", "logicalOperator", 
			"comparisonOperator", "value", "textLiteral", "decimalLiteral", "groupByCaluse", 
			"groupByItem"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'>='", "'>'", "'<='", "'<'", "'!='", "'+'", "'-'", "'*'", 
			"'/'", "'!'", "'&&'", "'||'", "','", "';'", "':'", "'('", "')'", "'_'", 
			"'\\N'", "'?'", null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "'<>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "EQUAL_OPERATOR", "GREATER_OR_EQUAL_OPERATOR", "GREATER_THAN_OPERATOR", 
			"LESS_OR_EQUAL_OPERATOR", "LESS_THAN_OPERATOR", "NOT_EQUAL_OPERATOR", 
			"PLUS_OPERATOR", "MINUS_OPERATOR", "MULT_OPERATOR", "DIV_OPERATOR", "LOGICAL_NOT_OPERATOR", 
			"LOGICAL_AND_OPERATOR", "LOGICAL_OR_OPERATOR", "COMMA_SYMBOL", "SEMICOLON_SYMBOL", 
			"COLON_SYMBOL", "OPEN_PAR_SYMBOL", "CLOSE_PAR_SYMBOL", "UNDERLINE_SYMBOL", 
			"NULL2_SYMBOL", "PARAM_MARKER", "CREATE_SYMBOL", "SELECT_SYMBOL", "FROM_SYMBOL", 
			"TABLE_SYMBOL", "AS_SYMBOL", "WHERE_SYMBOL", "SUM_SYMBOL", "AND_SYMBOL", 
			"OR_SYMBOL", "STRING_SYMBOL", "INT_SYMBOL", "DOUBLE_SYMBOL", "GROUP_SYMBOL", 
			"BY_SYMBOL", "BETWEEN_SYMBOL", "NO_SYMBOL", "NOT_SYMBOL", "IN_SYMBOL", 
			"WS", "IDENTIFIER", "STRING_LITERAL", "INT", "DOUBLE", "NOT_EQUAL2_OPERATOR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ETSql.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ETSqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SqlstatementContext extends ParserRuleContext {
		public TerminalNode SEMICOLON_SYMBOL() { return getToken(ETSqlParser.SEMICOLON_SYMBOL, 0); }
		public SelectStatementContext selectStatement() {
			return getRuleContext(SelectStatementContext.class,0);
		}
		public CreateStatementContext createStatement() {
			return getRuleContext(CreateStatementContext.class,0);
		}
		public SqlstatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sqlstatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ETSqlListener ) ((ETSqlListener)listener).enterSqlstatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ETSqlListener ) ((ETSqlListener)listener).exitSqlstatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ETSqlVisitor ) return ((ETSqlVisitor<? extends T>)visitor).visitSqlstatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SqlstatementContext sqlstatement() throws RecognitionException {
		SqlstatementContext _localctx = new SqlstatementContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sqlstatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SELECT_SYMBOL:
				{
				setState(50);
				selectStatement();
				}
				break;
			case CREATE_SYMBOL:
				{
				setState(51);
				createStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(54);
			match(SEMICOLON_SYMBOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateStatementContext extends ParserRuleContext {
		public TerminalNode CREATE_SYMBOL() { return getToken(ETSqlParser.CREATE_SYMBOL, 0); }
		public TerminalNode TABLE_SYMBOL() { return getToken(ETSqlParser.TABLE_SYMBOL, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TerminalNode OPEN_PAR_SYMBOL() { return getToken(ETSqlParser.OPEN_PAR_SYMBOL, 0); }
		public Column_defsContext column_defs() {
			return getRuleContext(Column_defsContext.class,0);
		}
		public TerminalNode CLOSE_PAR_SYMBOL() { return getToken(ETSqlParser.CLOSE_PAR_SYMBOL, 0); }
		public CreateStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ETSqlListener ) ((ETSqlListener)listener).enterCreateStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ETSqlListener ) ((ETSqlListener)listener).exitCreateStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ETSqlVisitor ) return ((ETSqlVisitor<? extends T>)visitor).visitCreateStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateStatementContext createStatement() throws RecognitionException {
		CreateStatementContext _localctx = new CreateStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_createStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(CREATE_SYMBOL);
			setState(57);
			match(TABLE_SYMBOL);
			setState(58);
			tableName();
			setState(59);
			match(OPEN_PAR_SYMBOL);
			setState(60);
			column_defs();
			setState(61);
			match(CLOSE_PAR_SYMBOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Column_defsContext extends ParserRuleContext {
		public List<Column_defContext> column_def() {
			return getRuleContexts(Column_defContext.class);
		}
		public Column_defContext column_def(int i) {
			return getRuleContext(Column_defContext.class,i);
		}
		public List<TerminalNode> COMMA_SYMBOL() { return getTokens(ETSqlParser.COMMA_SYMBOL); }
		public TerminalNode COMMA_SYMBOL(int i) {
			return getToken(ETSqlParser.COMMA_SYMBOL, i);
		}
		public Column_defsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_column_defs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ETSqlListener ) ((ETSqlListener)listener).enterColumn_defs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ETSqlListener ) ((ETSqlListener)listener).exitColumn_defs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ETSqlVisitor ) return ((ETSqlVisitor<? extends T>)visitor).visitColumn_defs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Column_defsContext column_defs() throws RecognitionException {
		Column_defsContext _localctx = new Column_defsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_column_defs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(63);
			column_def();
			}
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA_SYMBOL) {
				{
				{
				setState(64);
				match(COMMA_SYMBOL);
				setState(65);
				column_def();
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Column_defContext extends ParserRuleContext {
		public FullColumnNameContext fullColumnName() {
			return getRuleContext(FullColumnNameContext.class,0);
		}
		public Type_nameContext type_name() {
			return getRuleContext(Type_nameContext.class,0);
		}
		public Column_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_column_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ETSqlListener ) ((ETSqlListener)listener).enterColumn_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ETSqlListener ) ((ETSqlListener)listener).exitColumn_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ETSqlVisitor ) return ((ETSqlVisitor<? extends T>)visitor).visitColumn_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Column_defContext column_def() throws RecognitionException {
		Column_defContext _localctx = new Column_defContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_column_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			fullColumnName();
			setState(72);
			type_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Type_nameContext extends ParserRuleContext {
		public TerminalNode INT_SYMBOL() { return getToken(ETSqlParser.INT_SYMBOL, 0); }
		public TerminalNode STRING_SYMBOL() { return getToken(ETSqlParser.STRING_SYMBOL, 0); }
		public TerminalNode DOUBLE_SYMBOL() { return getToken(ETSqlParser.DOUBLE_SYMBOL, 0); }
		public Type_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ETSqlListener ) ((ETSqlListener)listener).enterType_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ETSqlListener ) ((ETSqlListener)listener).exitType_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ETSqlVisitor ) return ((ETSqlVisitor<? extends T>)visitor).visitType_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Type_nameContext type_name() throws RecognitionException {
		Type_nameContext _localctx = new Type_nameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type_name);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING_SYMBOL) | (1L << INT_SYMBOL) | (1L << DOUBLE_SYMBOL))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectStatementContext extends ParserRuleContext {
		public TerminalNode SELECT_SYMBOL() { return getToken(ETSqlParser.SELECT_SYMBOL, 0); }
		public SelectElementsContext selectElements() {
			return getRuleContext(SelectElementsContext.class,0);
		}
		public TerminalNode FROM_SYMBOL() { return getToken(ETSqlParser.FROM_SYMBOL, 0); }
		public TableSourcesContext tableSources() {
			return getRuleContext(TableSourcesContext.class,0);
		}
		public WhereClauseContext whereClause() {
			return getRuleContext(WhereClauseContext.class,0);
		}
		public GroupByCaluseContext groupByCaluse() {
			return getRuleContext(GroupByCaluseContext.class,0);
		}
		public SelectStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ETSqlListener ) ((ETSqlListener)listener).enterSelectStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ETSqlListener ) ((ETSqlListener)listener).exitSelectStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ETSqlVisitor ) return ((ETSqlVisitor<? extends T>)visitor).visitSelectStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectStatementContext selectStatement() throws RecognitionException {
		SelectStatementContext _localctx = new SelectStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_selectStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(SELECT_SYMBOL);
			setState(77);
			selectElements();
			setState(78);
			match(FROM_SYMBOL);
			setState(79);
			tableSources();
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE_SYMBOL) {
				{
				setState(80);
				whereClause();
				}
			}

			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GROUP_SYMBOL) {
				{
				setState(83);
				groupByCaluse();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectElementsContext extends ParserRuleContext {
		public Token star;
		public List<SelectElementContext> selectElement() {
			return getRuleContexts(SelectElementContext.class);
		}
		public SelectElementContext selectElement(int i) {
			return getRuleContext(SelectElementContext.class,i);
		}
		public TerminalNode MULT_OPERATOR() { return getToken(ETSqlParser.MULT_OPERATOR, 0); }
		public List<TerminalNode> COMMA_SYMBOL() { return getTokens(ETSqlParser.COMMA_SYMBOL); }
		public TerminalNode COMMA_SYMBOL(int i) {
			return getToken(ETSqlParser.COMMA_SYMBOL, i);
		}
		public SelectElementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectElements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ETSqlListener ) ((ETSqlListener)listener).enterSelectElements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ETSqlListener ) ((ETSqlListener)listener).exitSelectElements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ETSqlVisitor ) return ((ETSqlVisitor<? extends T>)visitor).visitSelectElements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectElementsContext selectElements() throws RecognitionException {
		SelectElementsContext _localctx = new SelectElementsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_selectElements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MULT_OPERATOR:
				{
				setState(86);
				((SelectElementsContext)_localctx).star = match(MULT_OPERATOR);
				}
				break;
			case SUM_SYMBOL:
			case IDENTIFIER:
				{
				setState(87);
				selectElement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA_SYMBOL) {
				{
				{
				setState(90);
				match(COMMA_SYMBOL);
				setState(91);
				selectElement();
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectElementContext extends ParserRuleContext {
		public FullColumnNameContext fullColumnName() {
			return getRuleContext(FullColumnNameContext.class,0);
		}
		public UidContext uid() {
			return getRuleContext(UidContext.class,0);
		}
		public TerminalNode AS_SYMBOL() { return getToken(ETSqlParser.AS_SYMBOL, 0); }
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public SelectElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ETSqlListener ) ((ETSqlListener)listener).enterSelectElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ETSqlListener ) ((ETSqlListener)listener).exitSelectElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ETSqlVisitor ) return ((ETSqlVisitor<? extends T>)visitor).visitSelectElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectElementContext selectElement() throws RecognitionException {
		SelectElementContext _localctx = new SelectElementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_selectElement);
		int _la;
		try {
			setState(111);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				fullColumnName();
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==AS_SYMBOL || _la==IDENTIFIER) {
					{
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==AS_SYMBOL) {
						{
						setState(98);
						match(AS_SYMBOL);
						}
					}

					setState(101);
					uid();
					}
				}

				}
				break;
			case SUM_SYMBOL:
				enterOuterAlt(_localctx, 2);
				{
				setState(104);
				functionCall();
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==AS_SYMBOL || _la==IDENTIFIER) {
					{
					setState(106);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==AS_SYMBOL) {
						{
						setState(105);
						match(AS_SYMBOL);
						}
					}

					setState(108);
					uid();
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FullColumnNameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ETSqlParser.IDENTIFIER, 0); }
		public FullColumnNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fullColumnName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ETSqlListener ) ((ETSqlListener)listener).enterFullColumnName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ETSqlListener ) ((ETSqlListener)listener).exitFullColumnName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ETSqlVisitor ) return ((ETSqlVisitor<? extends T>)visitor).visitFullColumnName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FullColumnNameContext fullColumnName() throws RecognitionException {
		FullColumnNameContext _localctx = new FullColumnNameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_fullColumnName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UidContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ETSqlParser.IDENTIFIER, 0); }
		public UidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_uid; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ETSqlListener ) ((ETSqlListener)listener).enterUid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ETSqlListener ) ((ETSqlListener)listener).exitUid(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ETSqlVisitor ) return ((ETSqlVisitor<? extends T>)visitor).visitUid(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UidContext uid() throws RecognitionException {
		UidContext _localctx = new UidContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_uid);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
